product service work v21